--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -601,34 +601,53 @@
                   <th> Costs </th>
                   <td><th> Amount </th></tr>
               </div>
-                <tr>Denting (A)
+                <tr>
+                  <div align = "left">
+                  <th>Denting (A)</th>
+                    </div>
+                    <div align = "right">
                     <td >
                       {{score.sco_costDenting}}
                     </td>
+                      </div>
                 </tr>
                 <tr>
-                    <th>Painting (B)</th>
+                  <div align = "left">
+                    <th>Painting (B)</th></div>
+                    <div align = "right">
                     <td>{{score.sco_costPainting}}</td>
-                </tr>
+                </div>
+                      </tr>
                 <tr>
+                  <div align = "left">
                     <th>Other (C)</th>
+                    </div>
+                    <div align = "right">
                     <td>{{score.sco_costOther}}</td>
-                </tr>
+                </div>
+                      </tr>
                 <tr>
+                  <div align = "left">
                     <th>Total Labour (D=A+B+C)</th>
+                    </div>
+                    <div align = "right">
                     <td ><b>
                      {{score.sco_costLabor}}
-                      </b></td>
+                      </b></td></div>
                 </tr>
                 <tr >
-                    <th>Parts (E)</th>
-                    <td>{{score.sco_costParts}}</td>
-                </tr>
+                  <div align = "left">
+                    <th>Parts (E)</th></div>
+                    <div align = "right">
+                    <td>{{score.sco_costParts}}</td></div>
+                      </tr>
                 <tr>
-                    <th>Total (D+E)</th>
+                  <div align = "left">
+                    <th>Total (D+E)</th></div>
+                    <div align = "right">
                     <td ><b>
                       {{score.sco_assessCost}}
-                      </b></td>
+                      </b></td></div>
                 </tr>
               </tbody>
             </table>
