--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -596,11 +596,9 @@
           <div class="box-sha">
             <table class="table table-bordered vertical_table" *ngFor="let score of scores">
               <tbody *ngIf ="score.sco_scoreType === 'claim'">
-                <tr>
-                  
-                  <th> Costs </th>
-                  <td><th> Amount </th></tr>
-              
+                <tr>       
+                  <th text-align:center> Costs </th>
+                  <td><th> Amount </th></tr>              
                 <tr>
                   <th>Denting (A)</th>
                     <td >
