--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -606,7 +606,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Painting (B)</th></div>
+                    <th>Painting (B)</th>
                     <td>{{score.sco_costPainting}}</td>
                       </tr>
                 <tr>
@@ -617,14 +617,14 @@
                     <th>Total Labour (D=A+B+C)</th>
                     <td ><b>
                      {{score.sco_costLabor}}
-                      </b></td></div>
+                      </b></td>
                 </tr>
                 <tr >
-                    <th>Parts (E)</th></div>
-                    <td>{{score.sco_costParts}}</td></div>
+                    <th>Parts (E)</th>
+                    <td>{{score.sco_costParts}}</td>
                       </tr>
                 <tr>
-                    <th>Total (D+E)</th></div>
+                    <th>Total (D+E)</th>
                     <td ><b>
                       {{score.sco_assessCost}}
                       </b></td>
