--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -596,11 +596,10 @@
           <div class="box-sha">
             <table class="table table-bordered vertical_table" *ngFor="let score of scores">
               <tbody *ngIf ="score.sco_scoreType === 'claim'">
-                 <div>
-                   <span>Estimates</span> </div>
                 <tr>       
                   <th> Costs </th>
-                  <td><th> Amount </th></td></tr>              
+                  <th> Amount </th>
+                </tr>              
                 <tr>
                   <td>Denting (A)</td>
                     <td >
