--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -601,33 +601,33 @@
                   <th> Amount </th>
                 </tr>              
                 <tr>
-                  <td>Denting (A)</td>
+                  <td>Repair (A)</td>
                     <td >
-                      {{score.sco_costDenting}}
+                     <!--- {{score.sco_costDenting}}--->200
                     </td>
                 </tr>
                 <tr>
                     <td>Painting (B)</td>
-                    <td>{{score.sco_costPainting}}</td>
+                    <td><!---{{score.sco_costPainting}}</td>-->245
                       </tr>
                 <tr>
                     <td>Other (C)</td>
-                    <td>{{score.sco_costOther}}</td>
+                    <td><!---{{score.sco_costOther}}-->100</td>
                       </tr>
                 <tr>
                     <th>Total Labour (D=A+B+C)</th>
                     <td ><b>
-                     {{score.sco_costLabor}}
+                     <!---{{score.sco_costLabor}}-->545
                       </b></td>
                 </tr>
                 <tr >
                     <td>Parts (E)</td>
-                    <td>{{score.sco_costParts}}</td>
+                    <td><!---{{score.sco_costParts}}-->600</td>
                       </tr>
                 <tr>
                     <th>Total (D+E)</th>
                     <td ><b>
-                      {{score.sco_assessCost}}
+                      <!---{{score.sco_assessCost}}-->1145
                       </b></td>
                 </tr>
               </tbody>
