Note change in 3rd party page and change "Registration no.:" to "Reference no:"

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -461,7 +461,7 @@
         </div>
         <span class="help_text" *ngIf="userSelectReport=='car Image'">Please upload images showing damages to your vehicle</span>
         <span class="help_text" *ngIf="userSelectReport=='police report'">Please upload police report, if available</span>
-        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please give name, phone number/email id of the other party OR upload an image of his/her insurance card</span>        <br>
+        <span class="help_text" *ngIf="userSelectReport=='3rd party'">Please provide contact details or upload any available images of insurance card, driving license or carnumber plate</span>        <br>
         <div *ngIf="userSelectReport=='3rd party'">
           <div class="form-group">
             <label for="comment"><b>Provide a short description of the damages to the other's property*</b></label>
@@ -553,7 +553,7 @@
             <br>
             <br>
             <div class="reg-text">
-              <span>Registration No. for your claim is:</span>
+              <span>Reference No. for your claim is:</span>
             </div>
             <br>
             <div class="sub-num">
