--- a/src/app/policy/policy.component.html
+++ b/src/app/policy/policy.component.html
@@ -706,7 +706,7 @@
                 <img class="complete-checkbox"  src="../../assets/registration_success.png">
               
                 <p style="margin-top: 50px;">
-                  Registration No. for collision claim is 
+                  Reference No. for collision claim is
                 </p>
                 <p>
                     <b>123 456 789</b>
