--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,11 +16,11 @@
 </div> -->
 
 <nav class="navbar navbar-expand-lg bg-dark">
-    <img src="../../assets/Capgemini_Logo_White_Mono_RGB.png" alt="logo" width="200px" height="60px">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarText">
+  <img src="../../assets/Capgemini_Logo_White_Mono_RGB.png" alt="logo" width="200px" height="60px">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+    <div class="collapse navbar-collapse " id="collapsibleNavbar">
       <ul class="navbar-nav  mr-auto">
       <li class="nav-item">
           <a class="nav-link" href="#">Insurance</a>
