--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,12 @@
-<!-- <div class="container">
+<div class="container">
   <div class="row">
-    <div class="col-md-12 container-nopadding">
+    <div class="container_header">
       <app-header></app-header>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 container-nopadding">
-       <app-policy></app-policy>
+      <app-home></app-home>    
     </div>
   </div>
-</div> -->
-
-
-<router-outlet></router-outlet>
+</div>
