--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,12 +15,13 @@
   </nav>
 </div> -->
 
-<nav class="navbar navbar-expand-lg bg-dark">
-  <img src="../../assets/Capgemini_Logo_White_Mono_RGB.png" alt="logo" width="200px" height="60px">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse " id="collapsibleNavbar">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+   <img src="../../assets/Capgemini_Logo_White_Mono_RGB.png" alt="logo" width="200px" height="60px" class="navbar-brand">
+    <a href="#" class="navbar-center" (click)="selectHome()"><b>Digital FNOL</b></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <span class="navbar-toggler-icon"></span> -->
+    </button>
+    <!-- <div class="collapse navbar-collapse " id="navbarNav">
       <ul class="navbar-nav  mr-auto">
       <li class="nav-item">
           <a class="nav-link" href="#">Insurance</a>
@@ -31,9 +32,6 @@
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
         </li> 
-        <li class="nav-item navbar-center">
-          <a href="#"><b>Digital FNOL</b></a>
-        </li>
       </ul>
       <span class="navbar-text">
           login &nbsp;
@@ -41,5 +39,6 @@
       <i class="material-icons">
           search
       </i>
-    </div>
+    </div> -->
   </nav>
+
