agent Broker Image

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,14 +69,14 @@
           </div>
           <div class="col-4 bg-hover">
             <div class="box-sha">
-              <img height="80%" width="85%" src="../../assets/Agent Image.PNG" alt="First slide">
+              <img height="80%" width="93%" src="../../assets/Agent_Broker.png" alt="First slide">
             </div>
             <br>
             <span>Agent/Broker</span>
           </div>
           <div class="col-4 bg-hover">
             <div class="box-sha">
-              <img height="80%" width="80%" src="../../assets/Icons_Passenger.png" alt="First slide">
+              <img height="80%" width="81%" src="../../assets/Icons_Passenger.png" alt="First slide">
             </div>
             <br>
             <span>Others filing a claim</span>
